initial css and javascript commit

--- a/assets/highscore.html
+++ b/assets/highscore.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Highscores</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
-    <section>
+    <section id="hs-container">
         <h2>Highscores</h2>
         <ol id="highscore-list">
         </ol>
-        <div>
-            <button id="back-btn">Go Back</button>
-            <button id="clear-btn">Clear All</button>
+        <div id="hs-btn">
+            <button id="back-btn" class="btn">Go Back</button>
+            <button id="clear-btn" class="btn">Clear All</button>
         </div>
     </section>
 </body>
