--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Code Quiz</title>
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
 </head>
 
 <body>
+    
+    <header>
+        <a id="viewHighScore" href="assets/highscore.html"> View High Score</a>
+        <div id="timer">⏱️Time: <span id="timeLeft">0</span></div>
+    </header>
+    
     <section id="container">
-
-        <header>
-            <a id="viewHighScore" href="assets/highscore.html"> View High Score</a>
-            <div id="timer">⏱️Time: <span id="timeLeft">0</span></div>
-        </header>
-
         <main>
             <div id="start">
                 <h2 id="title">JavaScript Quiz Challenge</h2>
-                <p>Answer a series of questions within the time limit. Incorrect answers will reduce the time by 10
-                    seconds!</p>
+                <p id="description">Answer a series of questions within the time limit. Incorrect answers will reduce the time by 10 seconds!</p>
+                <button id="start-btn" class="btn">Start Quiz</button>
             </div>
         </main>
 
-        <section id="question-container">
+        <section hidden id="question-container">
             <h2 id="question"></h2>
             <div id="options">
                 <button id="option0" class="option-btn"></button>
