--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@
 </head>
 
 <body>
-    
+
     <header>
         <a id="viewHighScore" href="assets/highscore.html"> View High Score</a>
-        <div id="timer">⏱️Time: <span id="timeLeft">0</span></div>
+        <div>⏱️Time: <span id="time-left">45</span></div>
     </header>
-    
+
     <section id="container">
         <main>
-            <div id="start">
+            <div id="starter">
                 <h2 id="title">JavaScript Quiz Challenge</h2>
-                <p id="description">Answer a series of questions within the time limit. Incorrect answers will reduce the time by 10 seconds!</p>
-                <button id="start-btn" class="btn">Start Quiz</button>
+                <p id="description">Answer a series of questions within the time limit. Incorrect answers will reduce
+                    the time by 10 seconds!</p>
+                <button id="start-btn" class="button">Start Quiz</button>
             </div>
         </main>
 
         <section hidden id="question-container">
             <h2 id="question"></h2>
             <div id="options">
-                <button id="option0" class="option-btn"></button>
-                <button id="option1" class="option-btn"></button>
-                <button id="option2" class="option-btn"></button>
-                <button id="option3" class="option-btn"></button>
+                <button id="option-A" class="option-btn"></button>
+                <button id="option-B" class="option-btn"></button>
+                <button id="option-C" class="option-btn"></button>
+                <button id="option-D" class="option-btn"></button>
                 <hr>
                 <p id="answer-check"></p>
             </div>
@@ -38,12 +39,15 @@
 
         <section hidden id="summary">
             <h2>All done! Your final score is <span id="score"></span> !</h2>
-            <form action="assets/highscore.html"></form>
-            <label for="initials">Enter your initials:</label>
-            <input type="text" id="intials">
-            <button id="submit-btn" class="btn">Submit</button>
+            <form action="assets/highscore.html">
+                <label for="initials">Enter your initials:</label>
+                <input type="text" id="initials">
+                <button id="submit-btn" class="button">Submit</button>
+            </form>
         </section>
     </section>
+
+    <script src="assets/questions.js"></script>
 </body>
 
 </html>
