updated css and added js functions

--- a/assets/highscore.html
+++ b/assets/highscore.html
@@ -14,8 +14,8 @@
         <ol id="highscore-list">
         </ol>
         <div id="hs-btn">
-            <button id="back-btn" class="btn">Go Back</button>
-            <button id="clear-btn" class="btn">Clear All</button>
+            <button id="back-btn" class="button">Go Back</button>
+            <button id="clear-btn" class="button">Clear All</button>
         </div>
     </section>
 </body>
