added quiz questions and check answers js function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <section hidden id="question-container">
             <h2 id="question-text"></h2>
-            <div id="choices">
+            <div id="options">
                 <button id="choice-A" class="choice-button"></button>
                 <button id="choice-B" class="choice-button"></button>
                 <button id="choice-C" class="choice-button"></button>
