added highscore board function

--- a/assets/highscore.html
+++ b/assets/highscore.html
@@ -18,6 +18,8 @@
             <button id="clear-btn" class="button">Clear All</button>
         </div>
     </section>
+
+    <script src="highscore.js"></script>
 </body>
 
 </html>
