--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </section>
 
         <section hidden id="results">
-            <h2>All done! Your final score is <span id="score"></span> !</h2>
-            <form action="assets/highscore.html">
-                <label for="initials">Enter your initials:</label>
+            <h2>All done! Your final score is <span id="score">0</span>!</h2>
+            <form id="fill-form" action="assets/highscore.html">
+                <p id="int-text">Enter your initials:</p>
                 <input type="text" id="initials">
                 <button id="submit-btn" class="button">Submit</button>
             </form>
